# matmatikal-api

./: .editorconfig  .env  Cargo.toml
bindings/: UploadWeb.ts
migrations/2024-05-17-192315_create_users/: up.sql
migrations/2024-05-27-165644_sketches/: down.sql  up.sql
migrations/2024-05-30-221244_groups/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: google.rs  login.rs  mod.rs  register.rs  users.rs
src/sketches/: explore.rs  mod.rs  upload.rs
