[package]
name = "matmatikal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = "0.4.38"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
ts-rs = "8.1.0"
